[gd_scene load_steps=5 format=3 uid="uid://drn5567datbpt"]

[ext_resource type="Script" path="res://card_test.gd" id="1_ku2nj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8nmw3"]
size = Vector3(0.064, 0.001, 0.089)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_drymk"]
albedo_color = Color(0.387572, 0.682836, 0.867337, 1)

[sub_resource type="BoxMesh" id="BoxMesh_euy4i"]
material = SubResource("StandardMaterial3D_drymk")
size = Vector3(0.064, 0, 0.089)

[node name="CardTest" type="Node3D"]
script = ExtResource("1_ku2nj")

[node name="Card Root" type="Node3D" parent="."]

[node name="Area3D" type="Area3D" parent="Card Root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Card Root/Area3D"]
shape = SubResource("BoxShape3D_8nmw3")

[node name="Card Hover" type="Node3D" parent="Card Root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)

[node name="Card Flip Lift" type="Node3D" parent="Card Root/Card Hover"]

[node name="Card Visible" type="MeshInstance3D" parent="Card Root/Card Hover/Card Flip Lift"]
mesh = SubResource("BoxMesh_euy4i")

[connection signal="input_event" from="Card Root/Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="Card Root/Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Card Root/Area3D" to="." method="_on_area_3d_mouse_exited"]
